<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c78b5509"
    >
    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#ffffffff"
        >
        <com.example.jihyun.memo1.common.TitleBackgroundButton
            android:id="@+id/titleBackgroundBtn"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:text="@string/new_title"
            android:textSize="18dp"
            android:textStyle="bold"
            />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/contentsLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_below="@+id/titleLayout"
        >

        <LinearLayout
            android:id="@+id/memoLayout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            >
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/insert_memoEdit"
                    android:layout_width="200dp"
                    android:layout_height="160dp"
                    android:gravity="top"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    android:textColor="#ff000000"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:background="@drawable/memo_back"
                    />

            </FrameLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_horizontal"
                >
                <com.example.jihyun.memo1.common.TitleBitmapButton
                    android:id="@+id/insert_textBtn"
                    android:layout_width="100dp"
                    android:layout_height="76dp"
                    android:text="@string/text_btn"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="#ff420000"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dateLayout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            >
            <com.example.jihyun.memo1.common.TitleBitmapButton
                android:id="@+id/insert_dateBtn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />
            <com.example.jihyun.memo1.common.TitleBitmapButton
                android:id="@+id/insert_timeBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >
            <com.example.jihyun.memo1.common.TitleBitmapButton
                android:id="@+id/insert_saveBtn"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:text="@string/save_btn"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#ff420000"
                />
            <com.example.jihyun.memo1.common.TitleBitmapButton
                android:id="@+id/deleteBtn"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:text="@string/delete_btn"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#ff420000"
                android:visibility="gone"
                />
            <com.example.jihyun.memo1.common.TitleBitmapButton
                android:id="@+id/insert_cancelBtn"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:text="@string/close_btn"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#ff420000"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
